# proton

./: .clang-format  .clang-format-ignore  .cspell.json  .gitignore  .pre-commit-config.yaml  .ruff.toml  CMakeLists.txt  README.md  package.xml  setup.py
cmake/: protonConfig.cmake  protonConfig.cmake.in  protonCoreGenerator.cmake  protonFunctions.cmake
core/: CMakeLists.txt
core/generator_scripts/: config.py  generator.py  normalize.py
core/generator_scripts/resources/: target_bundle_registry.c.jinja  target_connections.h.jinja  target_node.c.jinja  target_registry.c.jinja  target_registry_ids.h.jinja  target_registry_sizes.h.jinja  target_signal_registry.c.jinja
core/include/proton/: common.h  encode_decode.h  node_manager.h  proton.h  proton_config.h  registry.h  transport.h
core/include/proton/transport/: serial.h  udp4.h
core/proto/: proton.options  signal.options
core/src/: encode_decode.c  node_manager.c  proton.c  proton_field_callbacks.c  registry.c
core/src/transport/: serial.c  udp4.c
core/tests/core/: encode_decode_test.cpp  multi_node_test.cpp  multi_node_test.yaml  node_manager_test.cpp  periodic_bundle_test.cpp  periodic_bundle_test.yaml  registry_test.cpp  serial_transport_test.cpp  test.yaml  udp4_transport_test.cpp  utils.hpp
cpp/: CMakeLists.txt
cpp/include/protoncpp/: bundle_access.hpp  node_access.hpp  registry_lock.hpp  signal_access.hpp
cpp/include/protoncpp/node_builder/: config.hpp  config_tree.hpp  generator.hpp
cpp/include/protoncpp/transport/: core_serial.hpp  udp4.hpp
cpp/src/: bundle_access.cpp  signal_access.cpp
cpp/src/node_builder/: config.cpp  config_tree.cpp  generator.cpp
cpp/tests/: lock_test.cpp  node_builder_config_test.cpp  node_builder_config_tree_test.cpp  node_builder_generator_round_trip_test.cpp  node_builder_generator_test.cpp  node_manager_test.cpp  registry_test.cpp  serial_transport_test.cpp  udp4_transport_test.cpp
cpp/tests/test_configs/: bundle_invalid_consumer.yaml  bundle_with_no_consumer.yaml  bundle_with_no_producer.yaml  connection_no_first_element.yaml  connections_no_node_name.yaml  node_endpoints_not_sequence.yaml  signal_invalid_bytes_capacity.yaml  signal_invalid_id.yaml  signal_list_for_non_list_type.yaml  signal_no_string_capacity.yaml
cpp/tests/test_configs/json/: bundle_invalid_consumer.json  bundle_invalid_producer.json  bundle_no_consumers.json  bundle_no_id.json  bundle_no_name.json  bundle_no_producers.json  bundle_signals_not_list.json  bundle_valid_with_no_signals.json  bundle_with_no_consumer.json  bundle_with_no_producer.json  connection_no_first_element.json  connection_no_second_element.json  connections_no_id.json  connections_no_node_name.json  endpoint_invalid_type.json  endpoint_no_id.json  endpoint_no_type.json  endpoint_serial_no_device.json  endpoint_udp4_missing_ip.json  endpoint_udp4_missing_port.json  node_endpoints_not_sequence.json  node_no_endpoints.json  node_no_id.json  node_no_name.json  signal_invalid_bytes_capacity.json  signal_invalid_id.json  signal_invalid_string_capacity.json  signal_invalid_type_string.json  signal_list_for_non_list_type.json  signal_no_bytes_capacity.json  signal_no_string_capacity.json  test.json
cpp/tests/test_configs/yaml/: bundle_invalid_producer.yaml  bundle_no_consumers.yaml  bundle_no_id.yaml  bundle_no_name.yaml  bundle_no_producers.yaml  bundle_signals_not_list.yaml  bundle_valid_with_no_signals.yaml  bundle_with_no_consumer.yaml  bundle_with_no_producer.yaml  connection_no_second_element.yaml  connections_no_id.yaml  endpoint_invalid_type.yaml  endpoint_no_id.yaml  endpoint_no_type.yaml  endpoint_serial_no_device.yaml  endpoint_udp4_missing_ip.yaml  endpoint_udp4_missing_port.yaml  node_no_endpoints.yaml  node_no_id.yaml  node_no_name.yaml  signal_invalid_string_capacity.yaml  signal_invalid_type_string.yaml  signal_no_bytes_capacity.yaml  test.yaml
docs/: proton_core_migration_plan.md
examples/: CMakeLists.txt
examples/a300/: CMakeLists.txt  a300.yaml  a300_mcu.c  a300_mcu.cpp  a300_pc.c  a300_pc.cpp
examples/j100/: CMakeLists.txt  j100.yaml  j100_mcu.c  j100_mcu.cpp  j100_pc.c  j100_pc.cpp
examples/multi_node/: CMakeLists.txt  multi_node.yaml  multi_node_1.c  multi_node_1.cpp  multi_node_2.c  multi_node_2.cpp  multi_node_3.c  multi_node_3.cpp  multi_node_mcu.cpp  multi_node_ros2.cpp  multi_node_ros2_control.cpp
generator_scripts/: config.py  generator.py  internal_types.py  normalize.py
launch/: a300_ros2_bridge.launch.py
proto/: bundle.options  bundle.proto  proton.options  proton.proto  (+2 more)
protonc/: CMakeLists.txt  setup.py
protonc/Inc/: proton.h
protonc/Src/: proton.c  proton_field_callbacks.c
protonc/generator_scripts/resources/: proton__header_node.h.jinja  proton__source_node.c.jinja
protonc/include/protonc/: node.h  proton.h
protonc/protonc/: config.py  protonc_generator.py  source_writer.py
protonc/scripts/: config.py  generator.py  source_writer.py
protonc/src/: node.c  proton.c  proton_field_callbacks.c
protonc/tests/: CMakeLists.txt  receive.c  send.c
protonc/tests/a300/: CMakeLists.txt  a300.c
protonc/tests/a300/config/: a300.yaml
protonc/tests/sample/: CMakeLists.txt  sample.c
protonc/tests/sample/config/: sample.yaml
protoncpp/: CMakeLists.txt
protoncpp/Inc/: proton.hpp
protoncpp/Src/: proton.cpp
protoncpp/include/protoncpp/: bundle.hpp  bundle_manager.hpp  common.hpp  config.hpp  manager.hpp  proton.hpp  safe_queue.hpp  signal.hpp  status.hpp
protoncpp/include/protoncpp/transport/: serial.hpp  transport.hpp  udp4.hpp
protoncpp/src/: bundle.cpp  bundle_manager.cpp  config.cpp  manager.cpp  proton.cpp  signal.cpp
protoncpp/src/transport/: serial.cpp  udp4.cpp
protoncpp/tests/: bundle.cpp  bundle.yaml  bundle_test.cpp  signal_test.cpp  test.yaml  utils.cpp  utils.hpp
protoncpp/tests/a300/: CMakeLists.txt  a300.cpp
protoncpp/tests/a300/config/: a300.yaml
tests/: CMakeLists.txt  test.yaml
tests/protonc/: bundle_test.cpp  proton_test.cpp  signal_test.cpp  utils.cpp  utils.hpp
tests/protoncpp/: bundle_test.cpp  signal_test.cpp  utils.cpp  utils.hpp
(+23 files in other folders)
