<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>proton</name>
  <version>2.38.0</version>
  <description>ROS-agnostic peer to peer messaging protocol</description>
  <maintainer email="thomas.wallis@rockwellautomation.com">Tom Wallis</maintainer>
  <license>Clearpath Proprietary</license>

  <buildtool_depend>cmake</buildtool_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>protobuf</build_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
